--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Manish Vangara - Data Scientist & Data Engineer</title>
+    <title>Manish Vangara - Data Analyst</title>
   </head>
   <body>
     <div id="root"></div>
